Oscar changes logic implementations